@@ -1,15 +1,7 @@
 [buildout]
 develop = .
 parts = test interpreter
-index = http://pypi.python.org/simple
-extends = http://download.zope.org/zope3.4/versions.cfg
-versions = versions
-allow-picked-versions = false
-use-dependency-links = false
-
-[versions]
-zope.testbrowser =
-zope.publisher = 3.5.1
+index = http://download.zope.org/zope3.4/
 
 [test]
 recipe = zc.recipe.testrunner
